Fix blog listing not centred on 4k

--- a/src/blog/components/card/card.scss
+++ b/src/blog/components/card/card.scss
@@ -2,7 +2,12 @@
 ml-blog-card {
   .mdl-card {
     width: 100%;
+    max-width: 900px;
     min-height: 250px;
+
+    margin-left: auto;
+    margin-right: auto;
+
     background: url('images/background.png') center / cover;
   }
 
