--- a/src/blog/components/listing/listing.scss
+++ b/src/blog/components/listing/listing.scss
@@ -1,7 +1,3 @@
 ml-blog-listing {
-  .mdl-cell {
-    max-width: 900px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
+
 }
